Fix equipment txt wrapper max size width so it does not break the layout when text is long

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -328,6 +328,11 @@ form {
 .rental-rates-list {
    padding-left: 20px;
 }
+.equipment-txt-wrapper {
+   width: 100%;
+   max-width: 260px;
+   min-width: 230px;
+}
 .equipment-txt-wrapper > p {
    font-weight: 600;
    color: var(--info-txt-color);
